# current-monitor-f0

./: .gitmodules  Cargo.toml  Makefile.toml  README.md  flash-release.gdb  flash.gdb  memory.x  openocd.cfg
.cargo/: config
src/: config.rs  main.rs  report.rs
src/support/: hooks.rs  logging.rs  mod.rs
