[package]
authors = ["ololoshka2871"]
name = "current-monitor-f0"
version = "0.2.0"
edition = "2018"
readme = "README.md"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"

# HAL
stm32f0xx-hal = { version = "0.18", features = ["rt", "stm32-usbd"] }
embedded-hal = "0.2.7"
panic-halt = "0.2.0"

# RTIC
cortex-m-rtic = { version = "1.1" }
systick-monotonic = "1.0.1"

# ina219
ina219 = "0.1.0"

# usb
usb-device = "0.2.8"
stm32-usbd = "0.6.0"

# hid
usbd-hid = "0.6.0"
usbd-hid-macros = "0.5.2"

# serde
serde = { version = "1.0", default-features = false }

[profile.dev.package."*"]
opt-level = "z"

[profile.dev]
opt-level = "z"
lto = false
panic = "abort"

[profile.release]
opt-level = "s"
codegen-units = 1 # better optimizations
debug = true # добавлять отладочные символы. Не влияет на размер исполняемого кода, зато работает дебаг
panic = 'abort'
lto = false # Делает только хуже


[features]
default = [
    "stm32f042", # mcu
]

# select MCU
stm32f042 = ["stm32f0xx-hal/stm32f042"]
